--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/povertyPage.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/povertyPage.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.w3.org/1999/xhtml">
 
     <head>
-        <title>Anfrage</title>
+        <title>You're poor - Rhinoshare</title>
     </head>
 
     <body>
