--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/deleteArticle.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/deleteArticle.html
@@ -1,60 +1,62 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" layout:decorate="~{/mainpage}"
       xmlns:layout="http://www.w3.org/1999/xhtml" >
-<head></head>
 
-<body>
-<div class="container" layout:fragment="content" style="margin-top: 50px">
-        <form method="post" th:object="${article}">
-            <h1 th:text="${article.getName()}">SampleName</h1>
-            <table>
-                <!-- Hier if einfügen für default Bild-->
-                <tr th:if="!${article.imageIsEmpty()}">
-                    <td>Artikelbild</td>
-                    <td> <img th:src="@{/image/{id} (id = ${article.getImageID()})}" width=auto height="300"/></td>
-                </tr>
-                <tr>
-                    <td>Beschreibung:</td>
-                    <td th:text="${article.getComment()}">SampleComment</td>
-                </tr>
-                <tr>
-                    <td>Kaution</td>
-                    <td th:text="${article.getDeposit()}+'€'">SampleDeposit</td>
-                </tr>
-                <tr>
-                    <td>Mietpreis</td>
-                    <td th:text="${article.getRent()} +'€'">SampleRent</td>
-                </tr>
-                <tr th:if="${article.forSale == true}">
-                    <td>Verkaufspreis</td>
-                    <td th:text="${article.getSellingPrice()} +'€'">SamplePrice</td>
-                </tr>
-                <tr>
-                    <td>Verfügbarkeit</td>
-                    <td th:switch="${article.isAvailable()}">
-                        <span th:case="true"><i class="fa fa-check-circle-o" aria-hidden="true"></i></span>
-                        <span th:case="false"><i class="fa fa-times-circle-o" aria-hidden="true"></i></span>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Zum Verkauf?</td>
-                    <td th:switch="${article.isForSale()}">
-                        <span th:case="true"><i class="fa fa-check-circle-o" aria-hidden="true"></i></span>
-                        <span th:case="false"><i class="fa fa-times-circle-o" aria-hidden="true"></i></span>
-                    </td>
-                </tr>
-            </table>
+    <head>
+        <title>Artikel löschen - Rhinoshare</title>
+    </head>
 
-            <p>Wollen sie diesen Artikel wirklich löschen?</p>
+    <body>
+    <div class="container" layout:fragment="content" style="margin-top: 50px">
+            <form method="post" th:object="${article}">
+                <h1 th:text="${article.getName()}">SampleName</h1>
+                <table>
+                    <!-- Hier if einfügen für default Bild-->
+                    <tr th:if="!${article.imageIsEmpty()}">
+                        <td>Artikelbild</td>
+                        <td> <img th:src="@{/image/{id} (id = ${article.getImageID()})}" width=auto height="300"/></td>
+                    </tr>
+                    <tr>
+                        <td>Beschreibung:</td>
+                        <td th:text="${article.getComment()}">SampleComment</td>
+                    </tr>
+                    <tr>
+                        <td>Kaution</td>
+                        <td th:text="${article.getDeposit()}+'€'">SampleDeposit</td>
+                    </tr>
+                    <tr>
+                        <td>Mietpreis</td>
+                        <td th:text="${article.getRent()} +'€'">SampleRent</td>
+                    </tr>
+                    <tr th:if="${article.forSale == true}">
+                        <td>Verkaufspreis</td>
+                        <td th:text="${article.getSellingPrice()} +'€'">SamplePrice</td>
+                    </tr>
+                    <tr>
+                        <td>Verfügbarkeit</td>
+                        <td th:switch="${article.isAvailable()}">
+                            <span th:case="true"><i class="fa fa-check-circle-o" aria-hidden="true"></i></span>
+                            <span th:case="false"><i class="fa fa-times-circle-o" aria-hidden="true"></i></span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Zum Verkauf?</td>
+                        <td th:switch="${article.isForSale()}">
+                            <span th:case="true"><i class="fa fa-check-circle-o" aria-hidden="true"></i></span>
+                            <span th:case="false"><i class="fa fa-times-circle-o" aria-hidden="true"></i></span>
+                        </td>
+                    </tr>
+                </table>
 
-            <br>
-            <td>
-                <button type="submit"  class="btn btn-danger">Löschen</button>
-                <a th:href="|/article/admin/${article.getArticleID()}|"> <button class="btn btn-warning" type="button">Abbrechen</button></a>
-            </td>
-        </form>
-    </div>
+                <p>Wollen sie diesen Artikel wirklich löschen?</p>
 
-</body>
+                <br>
+                <td>
+                    <button type="submit"  class="btn btn-danger">Löschen</button>
+                    <a th:href="|/article/admin/${article.getArticleID()}|"> <button class="btn btn-warning" type="button">Abbrechen</button></a>
+                </td>
+            </form>
+        </div>
+    </body>
 
 </html>
