--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/searchArticle.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/searchArticle.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" layout:decorate="~{/mainpage}"
       xmlns:layout="http://www.w3.org/1999/xhtml" >
-<head>
+
+    <head>
+        <title>Suche - Rhinoshare</title>
     </head>
 
-<body>
-    <div class="container" layout:fragment="content" style="margin-top: 20px">
-        <h1 class="display-5">Suche nach <span th:text="|'${query}'|"></span></h1>
-        <div class="grid-container">
-            <a th:href="|/article/${article.articleID}|" class="grid-item" th:each="article:${articles}">
-                <div class="item-grid-article">
-                    <div class="article-picture" th:if="!${article.imageIsEmpty()}">
-                        <img th:src="@{/image/{id} (id = ${article.getImageID()})}">
+    <body>
+        <div class="container" layout:fragment="content" style="margin-top: 20px">
+            <h1 class="display-5">Suche nach <span th:text="|'${query}'|"></span></h1>
+            <div class="grid-container">
+                <a th:href="|/article/${article.articleID}|" class="grid-item" th:each="article:${articles}">
+                    <div class="item-grid-article">
+                        <div class="article-picture" th:if="!${article.imageIsEmpty()}">
+                            <img th:src="@{/image/{id} (id = ${article.getImageID()})}">
+                        </div>
+                        <div class="article-picture" th:if="${article.imageIsEmpty()}">
+                            <img src="/img/placeholder_picture.png">
+                        </div>
+                        <div class="article-name" th:text="${article.getName()}" >...</div>
+                        <div class="article-location" th:text="${article.getCity()}" >...</div>
+                        <div class="article-lending-price" th:text="${article.getRent()} + '€'">...</div>
                     </div>
-                    <div class="article-picture" th:if="${article.imageIsEmpty()}">
-                        <img src="/img/placeholder_picture.png">
-                    </div>
-                    <div class="article-name" th:text="${article.getName()}" >...</div>
-                    <div class="article-location" th:text="${article.getCity()}" >...</div>
-                    <div class="article-lending-price" th:text="${article.getRent()} + '€'">...</div>
-                </div>
-
-            </a>
+                </a>
+            </div>
         </div>
-</div>
-</body>
+    </body>
 
 </html>
