--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/lendingRequest.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/lendingRequest.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.w3.org/1999/xhtml">
 
     <head>
-        <title>Ausleihformular</title>
+        <title>Ausleihanfrage - Rhinoshare</title>
     </head>
 
     <body onload="calculateDateBorders()">
