--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/overview.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/overview.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.w3.org/1999/xhtml">
 
     <head>
-        <title>Übersicht</title>
+        <title>Ausleihübersicht - Rhinoshare</title>
     </head>
 
     <body onload="generateAlertPopup()">
