--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/overviewLendings.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/overviewLendings.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.w3.org/1999/xhtml">
 
     <head>
-        <title>Ausgeliehene Artikel</title>
+        <title>Ausgeliehene Artikel - Rhinoshare</title>
     </head>
 
     <body>
