--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/proPayOverview.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/proPayOverview.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.w3.org/1999/xhtml">
 
     <head>
-        <title>ProPay Übersicht</title>
+        <title>ProPay Übersicht - Rhinoshare</title>
     </head>
 
     <body>
