--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/articleView.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/articleView.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.w3.org/1999/xhtml" >
 
     <head>
-        <title th:text="${article.getName()} - Rhinoshare"></title>
+        <title th:text="${article.getName()} + ' - Rhinoshare'">Artikel - Rhinoshare</title>
     </head>
 
     <body>
