--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/error/404.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/error/404.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="de" xmlns:th="http://www.thymeleaf.org">
 
-<head>
-    <meta charset="UTF-8">
-    <title>Rhinoshare</title>
-    <link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
-    <link rel="icon" href="/img/RhinoLogoSmall.png">
+    <head>
+        <meta charset="UTF-8">
+        <title>Error 404 - Rhinoshare</title>
+        <link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
+        <link rel="icon" href="/img/RhinoLogoSmall.png">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    </head>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-</head>
+    <body>
+        <h1>Da ist etwas schiefgelaufen. (404) </h1>
+        <h2>Wir arbeiten daran.</h2>
+        <a th:href="|/article/|"> <button class="btn btn-warning" type="button">Zurück zur Übersicht</button></a>
+    </body>
 
-<body>
-<h1>Da ist etwas schiefgelaufen. (404) </h1>
-<h2>Wir arbeiten daran.</h2>
-<a th:href="|/article/|"> <button class="btn btn-warning" type="button">Zurück zur Übersicht</button></a>
-</body>
 </html>
