--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/overviewLendings.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/overviewLendings.html
@@ -32,10 +32,7 @@
                         <input type="hidden" name="articleID" th:value="${lending.lendedArticle.articleID}">
                         <button type="finish">Artikel zurückgeben</button>
                     </form>
-                    <form th:action=|openConflict| method="post">
-                        <input type="hidden" name="lendingID" th:value="${lending.lendingID}">
-                        <button type="finish">Konflikt erzeugen</button>
-                    </form>
+                    <a th:href="|/openConflict/${lending.lendingID}|" role="button">Konflikt erzeugen</a>
                 </div>
             </table>
         </div>
