--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Admin/admin_overview.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Admin/admin_overview.html
@@ -12,10 +12,10 @@
     <body>
         <img id="titleImageTest" src="/img/rhinoLogoSmallAdmin.png">
         <ul class="navigationbar">
-            <li class="navbaritem" th:classappend="${mainActive}"><a href="/admin">Überblick</a></li>
+            <li class="navbaritem" th:classappend="${mainActive}"><a href="/admin">Konfliklösung</a></li>
             <li class="navbaritem" th:classappend="${userActive}"><a href="/admin/usermanagement">Benutzerverwaltung</a></li>
             <li class="navbaritem" th:classappend="${articleActive}"><a href="/admin/articlemanagement">Artikelverwaltung</a></li>
-            <li class="navbaritem" th:classappend="${lendingActive}"><a href="/admin/lendingmanagement">Ausleihen</a></li>
+            <li class="navbaritem" th:classappend="${lendingActive}"><a href="/admin/lendingmanagement">Ausleihverwaltung</a></li>
             <li style="float: right" class="navbaritem"><a href="/logout">Ausloggen</a></li>
             <li style="float: right" class="navbaritem"><a href="/">Zur Hauptseite</a></li>
         </ul>
