--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/articleView.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/articleView.html
@@ -58,7 +58,7 @@
             <div th:if="${article.owner != user} and ${article.available == true}">
                 <a th:href="|/overview/lendingRequest/${article.articleID}|"> <button class="button_std" type="button">Artikel Ausleihen</button></a>
             </div>
-            <div th:if="${article.owner != user} and ${article.forSale == true}">
+            <div th:if="${article.owner != user} and ${article.forSale == true} and ${article.available == true}">
                 <a th:href="|/overview/saleRequest/${article.articleID}|"> <button class="button_std_red" type="button">Artikel kaufen</button></a>
             </div>
             <div>
