add chat to article detailview, needs a small fix

--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Chat/chat_newChat.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Chat/chat_newChat.html
@@ -38,7 +38,7 @@
         <table>
             <tr>
                 <th scope="row">An</th>
-                <td> <Input type="text" th:field="*{toName}"/> </td>
+                <td th:text="${recipient.getUsername()}">Username</td>
             </tr>
             <tr>
                 <th scope="row">Nachricht</th>
