--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/povertyPage.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/povertyPage.html
@@ -8,10 +8,12 @@
 
     <body>
         <div class="container" layout:fragment="content" style="margin-top: 50px">
-            <h>Sorry, that you live in POVERTY you beggar</h>
-            <dr>
-                <a th:href="|/|" role="button">Zur Übersicht</a>
-            </dr>
+            <h1>Sorry, that you live in POVERTY you beggar</h1>
+            <div class="messagebox_error">
+                <a th:href="|/|" role="button">
+                    <button class="button_std_white">Zurück</button>
+                </a>
+            </div>
         </div>
     </body>
 
