--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/deleteArticle.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/deleteArticle.html
@@ -52,8 +52,8 @@
 
                 <br>
                 <td>
-                    <button type="submit"  class="btn btn-danger">Löschen</button>
-                    <a th:href="|/article/admin/${article.getArticleID()}|"> <button class="btn btn-warning" type="button">Abbrechen</button></a>
+                    <button type="submit"  class="button_std">Löschen</button>
+                    <a th:href="|/article/admin/${article.getArticleID()}|"> <button class="button_std_white" type="button">Abbrechen</button></a>
                 </td>
             </form>
         </div>
