--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/transactionsPage.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/transactionsPage.html
@@ -8,38 +8,50 @@
 
     <body>
         <div class="container" layout:fragment="content" style="margin-top: 50px">
-
-            Ausgaben:
+            <h1 th:if="${givings.size() < 1 && recieves.size() < 1}">Keine Transaktionen</h1>
+            <h1 th:if="${givings.size() > 0}">Ausgaben</h1>
             <table th:each="giving : ${givings}">
-                <div style="margin:0; margin-right:10px; border:2px solid #dfdfdf;
-                padding: 0em 1em 1em 1em; background-color:#FFFFFF;text-align:center">
-                    <h3>Empfänger: </h3>
-                    <div th:text="${giving.reciever.name}">0</div>
-                    <h3>Betrag: </h3>
-                    <div th:text="${giving.amount}">0</div>
-                    <h3>Artikel: </h3>
-                    <div th:text="${giving.article.name}">0</div>
-                    <h3>Datum: </h3>
-                    <div th:text="${giving.formattedTransactionDate}">0</div>
-                </div>
+                <table class="request_overview">
+                    <tr>
+                        <th>Empfänger</th>
+                        <td th:text="${giving.reciever.name}">...</td>
+                    </tr>
+                    <tr>
+                        <th>Betrag</th>
+                        <td th:text="${giving.amount}">...</td>
+                    </tr>
+                    <tr>
+                        <th>Artikel</th>
+                        <td th:text="${giving.article.name}">...</td>
+                    </tr>
+                    <tr>
+                        <th>Datum</th>
+                        <td th:text="${giving.formattedTransactionDate}">...</td>
+                    </tr>
+                </table>
             </table>
-            Einnahmen:
+
+            <h1 th:if="${recieves.size() > 0}">Einnahmen</h1>
             <table th:each="recieve : ${recieves}">
-                <div style="margin:0; margin-right:10px; border:2px solid #dfdfdf;
-                padding: 0em 1em 1em 1em; background-color:#FFFFFF;text-align:center">
-                    <h3>Sender: </h3>
-                    <div th:text="${recieve.giver.name}">0</div>
-                    <h3>Menge: </h3>
-                    <div th:text="${recieve.amount}">0</div>
-                    <h3>Artikel: </h3>
-                    <div th:text="${recieve.article.name}">0</div>
-                    <h3>Datum: </h3>
-                    <div th:text="${recieve.formattedTransactionDate}">0</div>
-                </div>
+                <table class="request_overview">
+                    <tr>
+                        <th>Sender</th>
+                        <td th:text="${recieve.giver.name}">...</td>
+                    </tr>
+                    <tr>
+                        <th>Betrag</th>
+                        <td th:text="${recieve.amount}">...</td>
+                    </tr>
+                    <tr>
+                        <th>Artikel</th>
+                        <td th:text="${recieve.article.name}">...</td>
+                    </tr>
+                    <tr>
+                        <th>Datum</th>
+                        <td th:text="${recieve.formattedTransactionDate}">...</td>
+                    </tr>
+                </table>
             </table>
-            <dr>
-                <a th:href="|/|" role="button">Zur Übersicht</a>
-            </dr>
         </div>
     </body>
 
