--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/viewFromPerson.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/viewFromPerson.html
@@ -8,7 +8,7 @@
 
     <body>
         <div class="container" layout:fragment="content" style="margin-top: 20px">
-            <h1 th:if="${articles.size() > 0}">Übersicht</h1>
+            <h1 th:if="${articles.size() > 0}">Deine eingestellten Artikel</h1>
             <h1 th:if="${articles.size() < 1}">Keine Artikel verfügbar</h1>
             <a href="/article/new/" th:if="${articles.size() < 1}">
                 <button class="button_std_white">Artikel einstellen</button>
