--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/mainpage.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/mainpage.html
@@ -27,7 +27,7 @@
             <li style="float: right" class="navbaritem" href th:if="${loggedIn == 'false'}">
                 <a href="/newaccount">Registrieren</a>
             </li>
-            <li style="float: right" class="navbaritem" href th:if="${loggedIn == 'true'}">
+            <li style="float: right" class="navbaritem" th:classappend="${userActive}" href th:if="${loggedIn == 'true'}">
                 <div class="dropdown">
                     <a href="/edit" th:text="${surname}" class="dropbtn">Benutzer</a>
                     <div class="dropdown-content">
